Feature/phase 1 read process write (#4)
* first batch

* run the first job -- succeed

* fix test issue

* fix CI issue

* fix trial

* rollback changes

* new trial fix CI

* rename the application.yml in for test

* update CI

* another trial

* run again

* debug CI

* fix the CI but committing sql files

* update CI

* add sonar to CI

* update CI

* fix docker-build step

* fix CI can't read sonar variables

* update sonar properties

* update the projectKey

* final update

* try again

* see coverage

* update CI