@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.10</version>
+		<version>3.4.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.reconciliation</groupId>
@@ -29,6 +29,31 @@
 	</scm>
 	<properties>
 		<java.version>21</java.version>
+   		<postgresql.version>42.7.8</postgresql.version>
+		<flyway.version>10.10.0</flyway.version>
+        <sonar.maven.plugin.version>3.11.0.3922</sonar.maven.plugin.version>
+        <jacoco.maven.plugin.version>0.8.12</jacoco.maven.plugin.version>
+		<jacoco.execution.data.file>${project.build.directory}/jacoco.exec</jacoco.execution.data.file>
+		
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <sonar.projectKey>ItsWillBill_reconciliation-engine</sonar.projectKey>
+        <sonar.organization>myorganization101</sonar.organization>
+        <sonar.projectName>Reconciliation Engine</sonar.projectName>
+        <sonar.java.source>21</sonar.java.source>
+        <sonar.sources>src/main/java</sonar.sources>
+        <sonar.tests>src/test/java</sonar.tests>
+        <sonar.java.binaries>target/classes</sonar.java.binaries>
+        <sonar.coverage.jacoco.xmlReportPaths>
+            ${project.build.directory}/site/jacoco/jacoco.xml
+        </sonar.coverage.jacoco.xmlReportPaths>
+        <sonar.junit.reportPaths>target/surefire-reports</sonar.junit.reportPaths>
+        <!-- Exclude generated/infra code from coverage and duplication checks -->
+        <sonar.coverage.exclusions>
+            **/infrastructure/persistence/entity/**,
+            **/ReconciliationEngineApplication.java
+        </sonar.coverage.exclusions>
+        <sonar.cpd.exclusions>**/db/migration/**</sonar.cpd.exclusions>
+        <sonar.exclusions>**/db/migration/**,**/generated-sources/**</sonar.exclusions>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -123,6 +148,43 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
+            </plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>${jacoco.maven.plugin.version}</version>
+				<executions>
+					<!-- Prepare agent before tests -->
+					<execution>
+						<id>prepare-agent</id>
+						<goals><goal>prepare-agent</goal></goals>
+					</execution>
+					<!-- Generate XML report -->
+					<execution>
+						<id>report</id>
+						<phase>verify</phase>
+						<goals><goal>report</goal></goals>
+						<configuration>
+							<outputDirectory>${project.build.directory}/jacoco</outputDirectory>
+							<dataFile>${project.build.directory}/jacoco/jacoco.exec</dataFile>
+							<output>file</output>
+							<xml>true</xml>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+            <!-- ===== SONARCLOUD ===== -->
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>${sonar.maven.plugin.version}</version>
+            </plugin>
 		</plugins>
 	</build>
 
